Horse Racing - fixed payouts on mobile screens so that it's more legible

--- a/src/VariousCollectionWebApp/wwwroot/style/horse-racing/horse-racing.css
+++ b/src/VariousCollectionWebApp/wwwroot/style/horse-racing/horse-racing.css
@@ -474,6 +474,7 @@ button:focus {
 .payout-runner-col {
     max-width: 70%;
     white-space: nowrap;
+    overflow: auto;
 }
 
 .payout-col {
